# comfyUI-Realtime-Lora

./: README.md  musubi_zimage_config_template.py  musubi_zimage_lora_trainer.py  pyproject.toml  realtime_lora_trainer.py
web/js/: dynamic_inputs.js
workflows/: FluxDev.json  Lora Analysis and Block Control Demo - Z-Image.json  Lora Analysis and Block Control Demo- ADVANCED - Z-Image.json  Wan2.2-ComboLoraMode-slower.json  Wan2.2-High.json  Wan2.2-LOW.json  Wan2.2.json
workflows/Lora Analysis and Block Editing/: Z-Image - Multi Image Demo.json
